# rummy-scores

./: .env  Cargo.toml  package-lock.json  package.json
app/: DROP FUNCTION create_new_game;.sql  package-lock.json  package.json  select create_new_game('{3, 5, 10}').sql  svelte.config.js
app/src/: global.d.ts
app/src/Components/: client.ts  models.ts  utils.ts
app/src/Components/LayerCake/: AxisX.html.svelte  AxisY.html.svelte  GroupLabels.html.svelte  MultiLine.svelte  QuadTree.percent-range.html.svelte  SharedTooltip.percent-range.html.svelte
app/src/routes/: +layout.svelte
app/src/routes/rummy/: index.svelte  new-game.svelte  new-player.svelte
app/src/routes/rummy/new-game/: +page.svelte
app/src/routes/rummy/new-player/: +page.svelte
app/src/routes/rummy/play-game/: [id].svelte
app/src/routes/rummy/play-game/[id]/: +page.svelte
app/src/routes/rummy/view-game/: [id].svelte
app/src/routes/rummy/view-game/[id]/: +page.svelte
scores/: 20.tsv  21.tsv  22.tsv  24.tsv  25.tsv  26.tsv  27.tsv  28.tsv  29.tsv  30.tsv  31.tsv  32.tsv  33.tsv  34.tsv  35.tsv  36.tsv  37.tsv  38.tsv  39.tsv  40.tsv  41.tsv  42.tsv  43.tsv  44.tsv  45.tsv  46.tsv  47.tsv  48.tsv  49.tsv  game-1.tsv  game-10.tsv  game-11.tsv  game-12.tsv  game-13.tsv  game-14.tsv  game-15.tsv  game-16.tsv  game-17.tsv  game-18.tsv  game-19.tsv  (+8 more)
src/: all_players.rs  auth.rs  game_data.rs  login.rs  main.rs  models.rs  new_game.rs  new_player.rs  round_completed.rs
