[package]
name = "rummy_scores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["form"] }
axum-extra = { version = "0.3.3", features = ["spa"] }
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.21"
parking_lot = "0.12.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
] }
tokio = { version = "1.18.2", features = ["macros"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tower-http= { version = "0.3.3", features = ["cors"] }
serde_with = "1.14.0"
csv = "1.1.6"
hyper = "0.14.19"
